[gd_scene load_steps=25 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/BugBoss/BugBoss.gd" type="Script" id=2]
[ext_resource path="res://Player/Hitbox/HitboxEnemy.gd" type="Script" id=3]
[ext_resource path="res://Enemies/BugBoss/bugBoss.png" type="Texture" id=4]
[ext_resource path="res://Enemies/WanderControl.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Effects/whiteShader.shader" type="Shader" id=7]
[ext_resource path="res://Enemies/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/Stats/Stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/Hurtbox/Hurtbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Theme/DefaultTheme.tres" type="Theme" id=11]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Attack",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 12.0
height = 28.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 12.0
height = 28.0

[sub_resource type="CircleShape2D" id=9]
radius = 68.7546

[sub_resource type="CapsuleShape2D" id=10]
radius = 12.0
height = 28.293

[sub_resource type="CapsuleShape2D" id=11]
radius = 8.0
height = 28.0

[sub_resource type="Animation" id=12]
resource_name = "Start"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BugBoss:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BugBoss:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="BugBoss" type="KinematicBody2D"]
pause_mode = 1
scale = Vector2( 2, 2 )
z_index = 2
collision_layer = 16
script = ExtResource( 2 )

[node name="BugBossShadow" type="Sprite" parent="."]
position = Vector2( 16, -4 )
scale = Vector2( 5.92768, 2.66001 )
texture = ExtResource( 1 )

[node name="LifeBar" type="ProgressBar" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 0.921569, 0.0470588, 0.0470588, 1 )
show_behind_parent = true
margin_left = -56.0
margin_top = -52.0
margin_right = 84.0
margin_bottom = -40.0
theme = ExtResource( 11 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BugBoss" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 16.4063, 7.39694 )
scale = Vector2( 3.77653, 2.97487 )
frames = SubResource( 6 )
animation = "Idle"
playing = true
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, -16 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 10 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 16, -16 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 9 )]
MaxHealth = 50

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 1, 1, 1, 0.321569 )
position = Vector2( 17.8535, -16 )
shape = SubResource( 9 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 16, -16 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 16, -16 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="WanderControl" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 17.8535, -26.8637 )
wr = 50

[node name="Timer" parent="WanderControl" index="0"]
process_mode = 0

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/Start = SubResource( 12 )
anims/Stop = SubResource( 13 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
[editable path="WanderControl"]
